Fix z-index of RTE's popups so they aren't hidden behind subsequent page elements. Also fix regression in which RTE was not auto-sizing to width of page in "new-form-layout" pages. 	Change on 2015/03/26 by jorr <jorr@google.com> ------------- Created by MOE: http://code.google.com/p/moe-java MOE_MIGRATED_REVID=89639971

--- a/coursebuilder/modules/oeditor/resources/oeditor.css
+++ b/coursebuilder/modules/oeditor/resources/oeditor.css
@@ -205,6 +205,9 @@ div.rte-control.showing-rte > div.rich-text {
   font-weight: bold;
   background-color: #ccc;
 }
+div.yui-editor-container {
+  z-index: inherit;
+}
 div.inputEx-Field > div.yui-editor-container {
   width: 510px;
 }
@@ -667,7 +670,6 @@ div.new-form-layout textarea.gcb-rte-textarea,
 div.new-form-layout div.CodeMirror {
   height: 400px;
 }
-div.yui-editor-container {
+div.new-form-layout div.inputEx-Field > div.yui-editor-container {
   width: inherit;
-  z-index: 15; /* higher than the RTE switch button */
 }
